improve startup time, refactored logging of startup process